--- a/style-tile/css/styles.css
+++ b/style-tile/css/styles.css
@@ -20,9 +20,48 @@ section {
 	border: 1px solid #000;
 	float: left;
 	margin: 0 10px;
-	height: 50px;
-	width: 50px;
+	height: 100px;
+	width: 100px;
 }
+
+section img {
+	height: 100px;
+	width: 100px;
+}
+
+img header {
+	height: 200px;
+	width: 200px;
+}
+
+h2 {
+	color: #48484A;
+}
+
+h1 {
+	color: red;
+}
+
+section {
+	margin-top: 20px;
+}
+
+.color-1 {
+background-color: red;
+}
+
+.color-2 {
+background-color: black;
+}
+
+.color-3 {
+background-color: #48484A;
+}
+
+.imagery-1 {
+
+}
+
 
 
 /* Show Grid */
