--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,25 @@
+html, body {
+  display: block;
+  margin:0 auto;
+  padding:0;
+  width:1000px;
+  height:100%;
+}
+
+
+
 
 h1 {
 	font-size: 55px;
 }
 
 .ui.grid {
-	text-align: center;
+	text-align: left;
+}
+
+
+
+.ui .segment {
+	margin-left: 100px;
+	color: gray;
 }
