--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,13 @@ html, body {
   height:100%;
 }
 
-
+#logo {
+	width: 250px;
+	height: 172px;
+	margin-left: 320px;
+	margin-bottom: -25px;
+	margin-top: 40px;
+}
 
 p {
 	color: gray;
@@ -84,4 +90,100 @@ footer a:hover {
 	padding-bottom: 100px;
 	font-size: 14px;
 	line-height: 24px;
+}
+
+
+<!--// SLIDESHOW //-->
+body{padding: 3em;background-color: #ccc;}
+html {box-sizing: border-box;}
+*, *:before, *:after {box-sizing: inherit;}
+
+
+
+
+
+.slideshow {
+  width: 995px;
+  margin: 0 auto;
+  overflow: hidden;
+  margin-top: 30px;
+}
+
+.slideshow-container {
+  width: 2500px;
+  font-size: 0;
+  transition: 1s ease;
+  height: 500px;
+}
+
+
+img, .text-container {
+  width: 1000px;
+  height: auto;
+  display: inline-block;
+  font-size: 16px;
+  text-align: center;
+}
+
+.text-container {
+  height: 225px;
+  position: relative;
+}
+
+
+p {
+  position: relative;
+  top: -45%;
+  padding: 5px;
+}
+
+.slide {
+  animation: slide 5s ease infinite;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0%);
+  }
+  
+  12.5% {
+    transform: translateX(0%);
+  }
+  
+  25% {
+    transform: translateX(-25%);
+  }
+  
+  37.5% {
+    transform: translateX(-25%);
+  }
+  
+  50% {
+    transform: translateX(-50%);
+  }
+  
+  62.5% {
+    transform: translateX(-50%);
+  }
+  
+  75% {
+    transform: translateX(-75%);
+  }
+  
+  87.5% {
+    transform: translateX(-75%);
+  }
+  
+  99% {
+    transform: translateX(-75%);
+  }
+  
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.p {
+  margin-top: 140px;
+  text-align: center;
 }
