--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,21 @@ div.ui.segment.raised {
 	color: gray;
 }
 
+i.icon.heart:before {
+content: "\f004";
+color: #d9261c;
+}
+
+i.icon.mail:before  {
+content: "\f0e0";
+color: #d9261c;
+}
+
+i.icon.phone:before {
+content: "\f095";
+color: #d9261c;
+}
+
 .ui.medium.image, .ui.medium.images .image, .ui.medium.images img {
 width: 244px;
 margin-top: 25px;
@@ -81,7 +96,7 @@ footer {
 }
 
 footer a:hover {
-	color: #f17c72;
+	color: #d9261c;
 }
 
 .copy {
@@ -103,7 +118,7 @@ html {box-sizing: border-box;}
 
 
 .slideshow {
-  width: 995px;
+  width: 1000px;
   margin: 0 auto;
   overflow: hidden;
   margin-top: 30px;
@@ -126,7 +141,7 @@ img, .text-container {
 }
 
 .text-container {
-  height: 225px;
+  height: 500px;
   position: relative;
 }
 
@@ -187,3 +202,10 @@ p {
   margin-top: 140px;
   text-align: center;
 }
+
+
+
+<!--// CALENDAR //-->
+
+
+
