--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,21 @@ p {
 	color: gray;
 }
 
+#yellow {
+	color: #ffe400;
+}
+
+.blue {
+	color: #00c0ff;
+}
+
+.red {
+	color: #d9261c;
+}
+
+.green {
+	color: #00d52d;
+}
 
 
 
